--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -1,5 +1,5 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\hyperlink{classGraphics}{Graphics} }{\pageref{classGraphics}}{}
-\item\contentsline{section}{\hyperlink{classTurtle}{Turtle} }{\pageref{classTurtle}}{}
+\item\contentsline{section}{\hyperlink{classTurtle}{Turtle} \\*Turtle-\/like graphics for interpreting l system generated code }{\pageref{classTurtle}}{}
 \end{DoxyCompactList}
