--- a/latex/classGraphics.tex
+++ b/latex/classGraphics.tex
@@ -27,7 +27,7 @@ void \hyperlink{classGraphics_a2f089f205f649a276c0995af6557a94c}{draw\+Circle} (
 \item[{int}]{radius}
 \end{DoxyParamCaption}
 )\hspace{0.3cm}{\ttfamily [inline]}}\hypertarget{classGraphics_a2f089f205f649a276c0995af6557a94c}{}\label{classGraphics_a2f089f205f649a276c0995af6557a94c}
-Takes the centre of the circle as x0, y0 values, and the radius of the circle. The circle is rendered using the mid-\/point algorithm. \index{Graphics@{Graphics}!draw\+Line@{draw\+Line}}
+Take the centre of the circle as x0, y0 values, and the radius of the circle. The circle is rendered using the mid-\/point algorithm. \index{Graphics@{Graphics}!draw\+Line@{draw\+Line}}
 \index{draw\+Line@{draw\+Line}!Graphics@{Graphics}}
 \subsubsection[{\texorpdfstring{draw\+Line(int start\+\_\+x, int start\+\_\+y, int end\+\_\+x, int end\+\_\+y)}{drawLine(int start_x, int start_y, int end_x, int end_y)}}]{\setlength{\rightskip}{0pt plus 5cm}void Graphics\+::draw\+Line (
 \begin{DoxyParamCaption}
@@ -37,7 +37,7 @@ Takes the centre of the circle as x0, y0 values, and the radius of the circle. T
 \item[{int}]{end\+\_\+y}
 \end{DoxyParamCaption}
 )\hspace{0.3cm}{\ttfamily [inline]}}\hypertarget{classGraphics_aa98fb835b7e746489ab2bd619274ed55}{}\label{classGraphics_aa98fb835b7e746489ab2bd619274ed55}
-Draws a line on the viewport given the starting point and ending point. This function uses Bresenham\textquotesingle{}s line drawing algorithm for rendering clearly and efficiently.
+Draw a line on the viewport given the starting point and ending point. This function uses Bresenham\textquotesingle{}s line drawing algorithm for rendering clearly and efficiently.
 
 Using a modification of Bresenham\textquotesingle{}s algorithm, this function can draw lines in all four quadrants \index{Graphics@{Graphics}!draw\+Vector@{draw\+Vector}}
 \index{draw\+Vector@{draw\+Vector}!Graphics@{Graphics}}
@@ -57,4 +57,4 @@ Returns an std\+::pair$<$int, int$>$ with endpoints of the given line
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-Graphics.\+h\end{DoxyCompactItemize}
+graphics.\+h\end{DoxyCompactItemize}
