--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -137,11 +137,19 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
+\chapter{Introduction}
+\label{md_README}
+\hypertarget{md_README}{}
+\input{md_README}
 \chapter{Class Index}
 \input{annotated}
+\chapter{File Index}
+\input{files}
 \chapter{Class Documentation}
 \input{classGraphics}
 \input{classTurtle}
+\chapter{File Documentation}
+\input{tree_8cpp}
 %--- End generated contents ---
 
 % Index
